--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@tanstack/react-query": "^5.81.5",
     "graphql": "^16.11.0",
     "graphql-request": "^7.2.0",
+    "lodash": "^4.17.21",
     "next": "15.3.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
